# confparser

./: .gitignore  README.md  pyproject.toml
confparser/: __init__.py  module.py
inicfp/: __init__.py  helper.py  module.py
tests/: test_genshin_cfg.py  test_pacman.py
tests/conf/: comment-inline.ini  genshin-config.ini  key-value-multiple-lines.ini  pacman.conf  subsections.ini
