[tool.poetry]
name = "inicfp"
version = "0.2.0"
description = "Very simple .ini-like file parser"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
